# observer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: run_tests.yml
observer/: __init__.py  azclients.py  cli.py  ioc.py  notify.py  settings.py
observer/ioc/: __init__.py  fs.py  scraper.py
requirements/: requirements-dev.txt  requirements.txt
tests/: __init__.py  cli_test.py  import_test.py  test_ioc.py
