[tool.poetry]
name = "observer"
version = "0.0.0.post9.dev0+da4b934.dirty"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
readme = "README.md"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
obs = "observer.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
adlfs = "*"
azure-identity = "*"
azure-storage-blob = "*"
dask = {version = "*", extras = ["complete"]}
fastparquet = "*"
httpx = "*"
multifutures = ">=0.1.2"
pandas = "*"
pydantic-settings = "*"
scipy = ">1.8"
searvey = "*"
tenacity = "*"
typer = {version = "*", extras = ["all"]}
xarray = {version = "*", extras = ["accel", "parallel", "io"]}
azure-keyvault = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=3"
mypy = "*"
ipykernel = "*"
ipdb = "*"
pandas-stubs = "*"

[tool.black]
line-length = 108
target-version = ['py310']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--verbose", "--showlocals", "--tb=short", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli = true
log_cli_level = "info"
testpaths = [
  "tests",
]
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["observer"]
concurrency = [
  "multiprocessing",
  "thread",
]
parallel = true
sigterm = true

[tool.coverage.report]
fail_under = 90.0
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
    '@overload',
    '@typing.overload',
    '\(Protocol\):$',
    'typing.assert_never',
    'assert_never',
]

[tool.poetry-dynamic-versioning]
enable = false
dirty = true

[tool.mypy]
python_version = "3.10"
plugins = [
  "pydantic.mypy",
]
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# mypy per-module options:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 108
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "C90",  # mccabe
    "UP",  # pyupgrade
    # "I",  # isort
    # "D",  # pydocstyle
    "T",  # pyupgrade
    "RUF100",  # Unused noqa
    "RUF200",  # Invalide pyproject
]
mccabe = { max-complexity = 14 }
ignore = [
    "E501", # line-too-long
]
